// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList renders error 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center text-danger"
  >
    <h5>
      An error has occured, please reload the application
    </h5>
  </div>
</div>
`;

exports[`UserList renders loader 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center"
  >
    loading users...
  </div>
</div>
`;

exports[`UserList renders table 1`] = `
<div>
  <table
    className="MuiTable-root-1"
  >
    <thead
      className="MuiTableHead-root-2"
    >
      <tr
        className="MuiTableRow-root-3 MuiTableRow-head-6"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-head-9"
          scope="col"
        >
          Id
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-head-9"
          scope="col"
        >
          First Name
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-head-9"
          scope="col"
        >
          Last Name
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-16"
    >
      <tr
        className="MuiTableRow-root-3"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-body-10"
        >
          1
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-body-10"
        >
          Jack
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-8 MuiTableCell-body-10"
        >
          Johnson
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
